objects/TestingObjectWithCustomFields__c.object
<CustomObject>
    <description>An object with CustomFields.  It will be used for checking custom field translations.</description>
    <fields>
        <fullName>ACustomFieldWithAGermanAndEngTranslation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACustomFieldWithAGermanAndEngTranslation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACustomFieldWithATranslation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACustomFieldWithATranslation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACustomFieldWithJustAGermanTranslation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACustomFieldWithJustAGermanTranslation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACustomFieldWithoutATranslation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACustomFieldWithoutATranslation</label>
        <type>Checkbox</type>
    </fields>
    <label>TestingObjectWithCustomFields</label>
    <nameField>
        <label>TestingObjectWithCustomFields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestingObjectWithCustomFieldss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>